Final Touches Added for Team Report Submission